--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ fastapi==0.99.1
 pydantic==1.10.11
 uvicorn==0.22.0
 passlib~=1.7.4
-asyncpg~=0.27.0
+asyncpg==0.28.0
 requests~=2.31.0
 PyJWT~=2.7.0
 SQLAlchemy~=1.4.49
 alembic~=1.11.1
+python-multipart==0.0.6
