--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:password@db:5432/postgres
+sqlalchemy.url = postgresql://postgres:password@localhost:5432/postgres
 
 
 [post_write_hooks]
